@@ -1,3 +1,8 @@
+2010-06-11  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Mono.TextEditor.Tests/ViTests.cs: Added vi key notation
+	  parser roundtrip test.
+
 2010-06-10  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Mono.TextEditor.Tests/ViTests.cs: Add a test for visual mode
